# pytorch_cpp_experiments

./: .travis.yml  CMakeLists.txt  Readme.md  Readme.txt
BasicMnist/: BasicMnist.cpp  basicMnist.cmake
CatsAndDogsCnn/: CatsAndDogsCnn.cpp  catsAndDogsCnn.cmake
Cifar10/: Cifar10.cpp  Cifar10DataSetParser.cpp  Cifar10DataSetParser.hpp  cifar10.cmake
Cifar10SaveAndLoad/: Cifar10.cpp  Cifar10DataSetParser.hpp  cifar10SaveAndLoad.cmake  main.cpp
Common/: Cifar100DataSetParser.cpp  Cifar100DataSetParser.hpp  Cifar10DataSetParser.cpp  Cifar10DataSetParser.hpp  ReadFile.cpp  ReadFile.hpp
FashionMnist/: FashionMnist.cpp  FashionMnistData.cpp  FashionMnistData.hpp  fashionMnist.cmake
FrontEndExample/: FrontEnd.cmake  FrontEndExample.cpp
HelloWorld/: CMakeLists.txt  HelloAten.cpp  HelloWorld.cmake
NnMnist/: NnMnist.cpp  nnMnist.cmake
SaveAndLoadNnMnist/: SaveAndLoadNnMnist.cpp  saveAndLoadNnMnist.cmake
SequenceNnMnist/: SequenceNnMnist.cpp  sequenceNnMnist.cmake
SimpleNeuralNet/: SimpleNeuralNet.cpp  simpleNn.cmake
StackedNeuralNet/: StackedNeuralNet.cpp  stackedNn.cmake
TorchNnModule/: torchNnModule.cmake
notebooks/: Experiments_simple_nn.ipynb  Tensors_part1.ipynb  pytorch_onnx_save_trial.ipynb
scripts/: download_cifar10.py  download_fashion_mnist.py  download_mnist.py
testModel/: bkup_main.cpp  main.cpp  testModel.cmake
