CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT(HelloAten-App)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)
SET(CMAKE_PREFIX_PATH /home/santhosh/testProjects/cpp_pytorch/libtorch)

FIND_PACKAGE(Torch REQUIRED)
ADD_EXECUTABLE(HelloAten HelloAten.cpp)
TARGET_LINK_LIBRARIES(HelloAten "${TORCH_LIBRARIES}")
